<resources>
    <string name="app_name">HiLo Game - Tinker</string>
    <string name="guess_number">Please Enter Your Guess Number</string>
    <string name="guess_button">Guess</string>
    <string name="reset_button">Reset Game</string>
    <string name="times_used">Times Used: </string>
    <string name="times_remain">Times Remain: </string>
    <string name="action_about">About</string>
    <string name="times_used_number">0</string>
    <string name="times_remain_number">10</string>
    <!-- TODO: replace with your name + userID -->
    <string name="author" translatable="false">Tinker (yang0229)</string>

</resources>
