<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.algonquinlive.yang0229.hilo_game_v1.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    >

    <EditText
        android:id="@+id/id_guess_number"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="84dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/guess_number"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="99dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/id_guess_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/guess_button"
        android:onClick="guess_click"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/id_guess_number"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/id_reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:onClick="reset_click"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="61dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/id_times_used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/times_used"
        app:layout_constraintRight_toLeftOf="@+id/id_times_remain_number"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="23dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_times_remain_number"
        tools:layout_constraintBaseline_creator="1" />

    <TextView
        android:id="@+id/id_times_remain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/times_remain"
        android:layout_marginEnd="39dp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/id_guess_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/id_times_used_number"
        tools:layout_constraintBaseline_creator="1" />

    <TextView
        android:id="@+id/id_times_used_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/times_used_number"
        android:layout_marginStart="31dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@+id/id_guess_button"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/id_times_remain" />

    <TextView
        android:id="@+id/id_times_remain_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/times_remain_number"
        app:layout_constraintRight_toLeftOf="@+id/id_times_used_number"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/id_times_used_number"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/id_times_used_number" />

</android.support.constraint.ConstraintLayout>
